--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@poc-native-ui/components",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "author": "Ian Oliveira",
   "license": "MIT",
   "main": "dist/cjs/index.js",
@@ -8,18 +8,18 @@
   "types": "dist/dts/index.d.ts",
   "scripts": {
     "prepublishOnly": "yarn build && cp package.json dist",
-    "build":"rm -rf /dist && yarn build:esm && yarn build:cjs",
+    "build": "rm -rf /dist && yarn build:esm && yarn build:cjs",
     "build:esm": "tsc",
     "build:cjs": "tsc --module CommonJS --outDir dist/cjs"
   },
   "devDependencies": {
+    "@poc-native-ui/ts-config": "^0.0.1",
     "@tsconfig/recommended": "^1.0.2",
     "@types/react": "^18.2.6",
     "@types/react-native": "^0.72.0",
     "react": "^18.2.0",
     "react-native": "^0.71.8",
-    "typescript": "^5.0.4",
-    "@poc-native-ui/ts-config":"*"
+    "typescript": "^5.0.4"
   },
   "publishConfig": {
     "access": "public",
