--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -1,7 +1,8 @@
 {
   "name": "@poc-native-ui/ts-config",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "license": "MIT",
+  "private": true,
   "devDependencies": {
     "@tsconfig/recommended": "^1.0.2"
   },
