--- a/packages/ts-config/package.json
+++ b/packages/ts-config/package.json
@@ -2,8 +2,7 @@
   "name": "@poc-native-ui/ts-config",
   "version": "0.0.2",
   "license": "MIT",
-  "private": true,
-  "devDependencies": {
+  "dependencies": {
     "@tsconfig/recommended": "^1.0.2"
   },
   "publishConfig": {
