--- a/packages/components/package.json
+++ b/packages/components/package.json
@@ -1,17 +1,17 @@
 {
   "name": "@poc-native-ui/components",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "author": "Ian Oliveira",
   "license": "MIT",
-  "main": "dist/cjs/index.js",
-  "module": "dist/esm/index.js",
-  "types": "dist/dts/index.d.ts",
+  "main": "index.js",
+  "module": "index.js",
+  "types": "index.d.ts",
   "scripts": {
     "prepublishOnly": "yarn build && cp package.json dist",
     "build": "rm -rf /dist && tsup index.ts --format esm,cjs --dts --external react-native --outDir dist"
   },
   "devDependencies": {
-    "@poc-native-ui/ts-config": "^0.0.6",
+    "@poc-native-ui/ts-config": "^0.0.7",
     "@tsconfig/recommended": "^1.0.2",
     "@types/react": "^18.2.6",
     "@types/react-native": "^0.72.0",
@@ -23,5 +23,6 @@
   "publishConfig": {
     "access": "public",
     "directory": "dist"
-  }
+  },
+  "gitHead": "c556e41bdb1b2c880c061ae4073acd01cfad41d6"
 }
